[package]
name = "replit_db"
version = "0.1.0"
edition = "2021"
authors = ["Rukchad Wongprayoon <timelessnesses@timelessnesses.me>"]
description = "A rust package for supporting Replit database. (Unofficial)"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.73"
reqwest = {version="0.11.20", features = ["blocking"]}
tokio = {version = "1.32.0", features = ["macros"]}
