[package]
name = "replit_db"
version = "1.0.1"
edition = "2021"
authors = ["Rukchad Wongprayoon <timelessnesses@timelessnesses.me>"]
description = "A rust package for supporting Replit database. (Unofficial)"
license-file="./LICENSE"
documentation = "https://docs.rs/replit_db"
homepage = "https://github.com/timelessnesses/replit_db"
repository = "https://github.com/timelessnesses/replit_db"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.73"
reqwest = {version="0.11.20", features = ["blocking"]}
urlencoding = "2.1.3"
